Modifications page Erreur + modifications diverses

--- a/src/projects.json
+++ b/src/projects.json
@@ -7,10 +7,10 @@
         "repository" : "https://github.com/barthRachel/Morpion"
     },
     {
-        "cover" : "https://zupimages.net/up/23/04/hdji.png",
+        "cover" : "https://zupimages.net/up/23/04/mgjp.png",
         "name" : "Kasa",
         "date" : "19 Novembre 2022",
-        "url" : "#",
+        "url" : "https://63d50630ed4c816312b8dde3--genuine-cheesecake-e8d017.netlify.app/",
         "repository" : "https://github.com/barthRachel/Kasa"
     },
     {
