--- a/src/projects.json
+++ b/src/projects.json
@@ -4,7 +4,7 @@
         "name" : "Pand'Adresses",
         "date" : "4 Février 2023",
         "url" : "https://barthrachel.github.io/pand-adresses/",
-        "repository" : "https://github.com/barthRachel/Booki"
+        "repository" : "https://github.com/barthRachel/pand-adresses"
     },
     {
         "cover" : "https://zupimages.net/up/23/04/hdji.png",
