--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^13.5.0",
     "node-sass": "^7.0.3",
     "react": "^18.2.0",
+    "react-back-to-top-button": "^0.0.14",
     "react-dom": "^18.2.0",
     "react-icons": "^4.6.0",
     "react-router-dom": "^6.4.3",
